# gis-python-tutorial

./: .gitignore  .pre-commit-config.yaml  README.md  devenv.nix  pyproject.toml
book/: 01_python_variables.ipynb  02_python_data_structures.ipynb  03_python_function_class.ipynb  04_python_control.ipynb  05_python_file.ipynb  06_numpy_pandas.ipynb  07_geopandas.ipynb  08_xarray.ipynb  _config.yml  _toc.yml  intro.md  lab001.ipynb  lab001_instructor.ipynb
data/csv/: wp222024_track.csv
scripts/: gsmap.py
